@@ -1,5 +1,3 @@
-
-
 void map_tile_load()
 {
 	
